--- a/style.css
+++ b/style.css
@@ -182,11 +182,11 @@ body {
 }
 
 .ondragel {
-  background-color: blue;
+  background-color: #00c5ff;
   opacity: 0.6;
 }
 
 .whiledrag {
-  border-color: blue;
+  border-color: #2f2fff;
   border-style: dashed;
 }
