--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ body {
   float: left;
 }
 
-#call_stack,
+/* #call_stack,
 #web_api,
 #callback_queue {
   border: 2px solid black;
@@ -179,6 +179,20 @@ body {
   width: 87%;
   height: 20%;
   position: relative;
+} */
+
+#debugger {
+  border: 1px solid black;
+  width: max-content;
+  margin: 0 auto;
+}
+
+#call_stack {
+  width: 80%;
+  height: 80%;
+  border: 1px solid black;
+  margin: 0 auto;
+  margin-top: 10px;
 }
 
 .ondragel {
